--- a/MovieApp.API/appsettings.json
+++ b/MovieApp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieAppConnection": "server = LAPTOP-Q5AD0KM4\\FELGDENT;database = MovieAppDb;Trusted_Connection = true "
+  }
 }
