movies API full

--- a/MovieApp.API/appsettings.json
+++ b/MovieApp.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieAppConnection": "server = LAPTOP-Q5AD0KM4\\FELGDENT;database = MovieAppDb;Trusted_Connection = true "
+    "MovieAppConnection": "Server=tcp:appmovie.database.windows.net,1433;Initial Catalog=appfilm.azurewebsites.net;Persist Security Info=False;User ID=nataweb;Password=!dev1234best;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   }
 }
